# AppliedRoboticsStudentInterface

./: CMakeLists.txt  README.md  dubinsMP.cpp  dubinsMP.hpp
external_lib/: libpolyclipping.so.22.0.0
images/: obstracle_list
src/: dubinsMP.cpp  dubinsMP.hpp  match_template.cpp  ocr.cpp  planning_ompl.cpp  planning_ompl.hpp  planning_ompl_.cpp  student_interface.cpp
